[gd_scene load_steps=12 format=2]

[ext_resource path="res://interactable/InteractableGameConsole.gd" type="Script" id=1]
[ext_resource path="res://scenes/games/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/games/ViewportManager.gd" type="Script" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 2, 1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.54, 0.96 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( -0.1, -0.27, -0.48, 0.1, -0.27, -0.48, -0.1, -0.27, 0.48, -0.1, 0.27, -0.48, 0.1, 0.27, -0.48, 0.1, -0.27, 0.48, -0.1, 0.27, 0.48, 0.1, 0.27, 0.48 )

[sub_resource type="SpatialMaterial" id=11]

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.96, 0.54 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.483554, 0.27522, 0.00746833 )

[node name="GameConsole" type="StaticBody"]
collision_layer = 3
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 9 )

[node name="Mesh2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.409594, 0.5, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.409594, 0.5, 0 )
shape = SubResource( 10 )

[node name="PlayerCamera" type="Tween" parent="."]

[node name="ViewportManager" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="ViewportManager"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
hdr = false
keep_3d_linear = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Menu" parent="ViewportManager/Viewport" instance=ExtResource( 2 )]

[node name="Screen" type="MeshInstance" parent="ViewportManager"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.51, 0.5, 0 )
material_override = SubResource( 11 )
mesh = SubResource( 6 )
skeleton = NodePath("../..")

[node name="Area" type="Area" parent="ViewportManager/Screen"]

[node name="CollisionShape" type="CollisionShape" parent="ViewportManager/Screen/Area"]
shape = SubResource( 12 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1, 0.5, 0 )

[connection signal="tween_completed" from="PlayerCamera" to="." method="_on_PlayerCamera_tween_completed"]
